add depends of access token to jobs routes
